--- a/agent/package.json
+++ b/agent/package.json
@@ -30,6 +30,7 @@
         "@ai16z/plugin-starknet": "workspace:*",
         "@ai16z/plugin-tee": "workspace:*",
         "@ai16z/plugin-coinbase": "workspace:*",
+        "@ai16z/plugin-meme-father": "workspace:*",
         "readline": "1.3.0",
         "ws": "8.18.0",
         "@ai16z/plugin-evm": "workspace:*",
