--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,6 +67,7 @@
         "js-sha1": "0.7.0",
         "js-tiktoken": "1.0.15",
         "langchain": "0.3.6",
+        "langfuse": "3.31.1",
         "ollama-ai-provider": "0.16.1",
         "openai": "4.73.0",
         "tinyld": "1.3.4",
