--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-router-dom": "6.22.1",
+        "recharts": "^2.14.1",
         "tailwind-merge": "2.5.5",
         "tailwindcss-animate": "1.0.7",
         "vite-plugin-top-level-await": "1.4.4",
