--- a/packages/client-auto/package.json
+++ b/packages/client-auto/package.json
@@ -9,9 +9,15 @@
         "@types/body-parser": "1.19.5",
         "@types/cors": "2.8.17",
         "@types/express": "5.0.0",
+        "@coral-xyz/anchor": "0.30.1",
+        "@solana/spl-token": "0.4.9",
+        "@solana/web3.js": "1.95.8",
+        "bignumber": "1.1.0",
+        "bignumber.js": "9.1.2",
         "body-parser": "1.20.3",
         "cors": "2.8.5",
-        "multer": "1.4.5-lts.1"
+        "multer": "1.4.5-lts.1",
+        "pumpdotfun-sdk": "1.3.2"
     },
     "devDependencies": {
         "tsup": "8.3.5"
